--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon server",
+    "start": "node server"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "twilio": "^3.77.0"
   }
 }
