--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node server"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
