[TRYING] to resolve static problem solution

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,15 +2,13 @@
   "builds": [
     {
       "src": "server.js",
-
-      "use": "@vercel/node"
+      "use": "@vercel/static"
     }
   ],
 
   "routes": [
     {
       "src": "/(.*)",
-
       "dest": "server.js"
     }
   ]
