[TRYING] to resolve static problem solution

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,6 +2,10 @@
   "builds": [
     {
       "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "server.js",
       "use": "@vercel/static"
     }
   ],
@@ -9,6 +13,7 @@
   "routes": [
     {
       "src": "/(.*)",
+
       "dest": "server.js"
     }
   ]
